--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Design Mastery | NovusHaus</title>
+    <title>NovusHaus</title>
   </head>
   <body>
     <header class="header">
       <nav>
         <div class="nav__logo"><a href="#">NovusHaus</a></div>
         <ul class="nav__links" id="nav-links">
-          <li class="link"><a href="#home">Home</a></li>
-          <li class="link"><a href="#choose">About</a></li>
-          <li class="link"><a href="#craft">Craft</a></li>
-          <li class="link"><a href="#testimonial">Testimonials</a></li>
+          <li class="link"><a href="#home">Início</a></li>
+          <li class="link"><a href="#choose">Sobre</a></li>
+          <li class="link"><a href="#craft">Criação</a></li>
+          <li class="link"><a href="#testimonial">Depoimentos</a></li>
           <li class="link"><a href="#blog">Blog</a></li>
         </ul>
         <div class="nav__menu__btn" id="menu-btn">
@@ -34,13 +34,13 @@
         </div>
       </nav>
       <div class="section__container header__container" id="home">
-        <h1>Make Your Interior More Minimalistic & Modern</h1>
+        <h1>Torne Seu Interior Mais Minimalista e Moderno</h1>
         <p>
-          Turn your room with panto into a lot more minimalistic and modern with
-          ease and speed
+          Transforme seu ambiente com facilidade e rapidez, 
+          tornando-o mais minimalista e moderno
         </p>
         <form action="/">
-          <input type="text" placeholder="Search furniture" />
+          <input type="text" placeholder="Pesquisar móveis" />
           <button><i class="ri-search-line"></i></button>
         </form>
         <a href="#choose"><i class="ri-arrow-down-double-line"></i></a>
@@ -50,42 +50,42 @@
     <section class="section__container choose__container" id="choose">
       <img class="choose__bg" src="assets/dot-bg.png" alt="bg" />
       <div class="choose__content">
-        <h2 class="section__header">Why Choose Us</h2>
+        <h2 class="section__header">Por Que Escolher a Gente</h2>
         <p class="section__subheader">
-          Experience Unmatched Creativity and Expertise in Interior Design.
-          Discover Why We're the Right Choice for Your Dream Space
+          Experimente Criatividade e Expertise Incomparáveis em Design de Interiores.
+          Descubra Por Que Somos a Escolha Certa Para o Espaço dos Seus Sonhos.
         </p>
         <div class="choose__grid">
           <div class="choose__card">
             <span><i class="ri-truck-line"></i></span>
-            <h4>Fast & Free Shipping</h4>
+            <h4>Envio Rápido e Gratuito</h4>
             <p>
-              Elevate your interior design with our Fast & Free Shipping service
-              without delay
+              Eleve o design de seu interior com nosso serviço de envio rápido e gratuito, 
+              sem atrasos.
             </p>
           </div>
           <div class="choose__card">
             <span><i class="ri-shopping-bag-3-line"></i></span>
-            <h4>Easy to Shop</h4>
+            <h4>Fácil de Comprar</h4>
             <p>
-              Discover Effortless Elegance: Explore Our Easy-to-Shop Interior
-              Design Solutions
+              Descubra elegância sem esforço: explore nossas soluções de design de interiores
+              fáceis de comprar.
             </p>
           </div>
           <div class="choose__card">
             <span><i class="ri-customer-service-2-line"></i></span>
-            <h4>24/7 Support</h4>
+            <h4>Suporte 24/7</h4>
             <p>
-              Experience peace of mind knowing that our dedicated team is
-              available round the clock
+              Tenha paz de espírito sabendo que nossa equipe dedicada está 
+              disponível 24 horas por dia.
             </p>
           </div>
           <div class="choose__card">
             <span><i class="ri-loop-right-line"></i></span>
-            <h4>Hassle Free Returns</h4>
+            <h4>Devoluções Sem Complicação</h4>
             <p>
-              We believe in the perfect match, and if it doesn't quite fit, we
-              make returning items a breeze
+              Acreditamos na combinação perfeita, e se não ficar satisfeito, 
+              tornamos as devoluções fáceis.
             </p>
           </div>
         </div>
@@ -93,7 +93,7 @@
       <div class="choose__image">
         <img src="assets/choose.jpg" alt="choose" />
       </div>
-    </section>
+    </section>    
 
     <section class="offer__container" id="offer">
       <div class="offer__grid__top">
@@ -101,11 +101,11 @@
         <img src="assets/offer-2.jpg" alt="offer" />
         <img src="assets/offer-3.jpg" alt="offer" />
         <div class="offer__content">
-          <h2 class="section__header">Smart Offers</h2>
+          <h2 class="section__header">Ofertas Inteligentes</h2>
           <p class="section__subheader">
-            Explore exclusive deals to transform your interior with style
+            Explore ofertas exclusivas para transformar seu interior com estilo
           </p>
-          <button class="btn">Explore Now</button>
+          <button class="btn">Explore Agora</button>
         </div>
       </div>
       <div class="offer__grid__bottom">
@@ -118,33 +118,33 @@
 
     <section class="section__container craft__container" id="craft">
       <div class="craft__content">
-        <h2 class="section__header">Crafted with excellent material</h2>
+        <h2 class="section__header">Criado com Material de Excelência</h2>
         <p class="section__subheader">
-          Elevate Your Space with Quality and Style
+          Eleve Seu Espaço com Qualidade e Estilo
         </p>
         <button class="btn">Explore</button>
       </div>
       <div class="craft__image">
         <div class="craft__image__content">
           <img src="assets/craft-1.png" alt="craft" />
-          <p>Nordic Chair</p>
-          <h4>$65.00</h4>
+          <p>Cadeira Nórdica</p>
+          <h4>R$350.00</h4>
         </div>
         <a href="#"><i class="ri-add-line"></i></a>
       </div>
       <div class="craft__image">
         <div class="craft__image__content">
           <img src="assets/craft-2.png" alt="craft" />
-          <p>Wingback Chair</p>
-          <h4>$50.00</h4>
+          <p>Cadeira Wingback</p>
+          <h4>R$250.00</h4>
         </div>
         <a href="#"><i class="ri-add-line"></i></a>
       </div>
       <div class="craft__image">
         <div class="craft__image__content">
           <img src="assets/craft-3.png" alt="craft" />
-          <p>Accent Chair</p>
-          <h4>$70.00</h4>
+          <p>Cadeira de Destaque</p>
+          <h4>R$450.00</h4>
         </div>
         <a href="#"><i class="ri-add-line"></i></a>
       </div>
@@ -159,40 +159,38 @@
       </div>
       <div class="modern__content">
         <h2 class="section__header">
-          We help you design modern interior design
+          Nós Ajudamos Você a Criar Um Design de Interior Moderno
         </h2>
         <p class="section__subheader">
-          Transform Your Space with Our Contemporary Interior Design Expertise:
-          Let us guide you in crafting sleek and stylish interiors that reflect
-          your unique taste and lifestyle
+          Transforme Seu Espaço com Nossa Expertise em Design de Interiores Contemporâneo: 
+          Deixe-nos guiá-lo na criação de interiores elegantes e estilosos que refletem 
+          seu gosto e estilo de vida únicos
         </p>
         <div class="modern__grid">
           <div class="modern__card">
             <span><i class="ri-checkbox-blank-circle-line"></i></span>
             <p>
-              Our team specializes in creating customized interior designs that
-              embrace modern aesthetics.
+              Nossa equipe é especializada em criar designs de interiores personalizados que abraçam a estética moderna.
             </p>
           </div>
           <div class="modern__card">
             <span><i class="ri-checkbox-blank-circle-line"></i></span>
             <p>
-              We stay at the forefront of design trends, ensuring your space is
-              stylish and innovative.
+              Estamos na vanguarda das tendências de design, garantindo que seu espaço seja estiloso e inovador.
             </p>
           </div>
           <div class="modern__card">
             <span><i class="ri-checkbox-blank-circle-line"></i></span>
             <p>
-              Modern interior design isn't just about aesthetics; it's about
-              functionality and comfort too.
+              O design de interiores moderno não se trata apenas de estética; é sobre 
+              funcionalidade e conforto também.
             </p>
           </div>
           <div class="modern__card">
             <span><i class="ri-checkbox-blank-circle-line"></i></span>
             <p>
-              We take care of all aspects of the design process, from concept to
-              procurement and installation.
+              Cuidamos de todos os aspectos do design de interiores, desde a seleção de móveis até 
+              o layout e a iluminação.
             </p>
           </div>
         </div>
@@ -201,125 +199,118 @@
     </section>
 
     <section class="section__container testimonial__container" id="testimonial">
-      <h2 class="section__header">Testimonials</h2>
-      <!-- Slider main container -->
+      <h2 class="section__header">Depoimentos</h2>
       <div class="swiper">
-        <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
-          <!-- Slides -->
           <div class="swiper-slide">
             <div class="testimonial__card">
               <p>
-                Working with them was an absolute pleasure! Their modern design
-                expertise completely transformed my home into a contemporary
-                haven. I now have a space that not only looks stunning but also
-                feels incredibly comfortable. I couldn't be happier with the
-                results
+                Trabalhar com eles foi um prazer absoluto! Sua expertise em design moderno
+                transformou completamente minha casa em um refúgio contemporâneo.
+                Agora tenho um espaço que não apenas parece deslumbrante, mas também
+                é incrivelmente confortável. Não poderia estar mais feliz com o resultado.
               </p>
-              <img src="assets/profile-pic-1.jpg" alt="testimonial" />
+              <img src="assets/profile-pic-1.jpg" alt="depoimento" />
               <h4>Sam William</h4>
-              <h5>CEO, Co-Founder</h5>
+              <h5>CEO, Co-Fundador</h5>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="testimonial__card">
               <p>
-                I hired them to revamp our office space, and the results
-                exceeded my expectations. Their innovative design concepts
-                breathed new life into our workplace, making it both functional
-                and stylish. The team's attention to detail and commitment to
-                quality are truly commendable.
+                Contratei-os para reformar nosso escritório, e os resultados
+                superaram minhas expectativas. Seus conceitos inovadores de design
+                deram nova vida ao nosso local de trabalho, tornando-o tanto funcional
+                quanto estiloso. A atenção aos detalhes e o compromisso com a qualidade
+                da equipe são realmente louváveis.
               </p>
-              <img src="assets/profile-pic-2.jpg" alt="testimonial" />
+              <img src="assets/profile-pic-2.jpg" alt="depoimento" />
               <h4>Michelle Anna</h4>
-              <h5>Office Renovator</h5>
+              <h5>Renovadora de Escritório</h5>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="testimonial__card">
               <p>
-                I had a vision of a minimalist-inspired home, and they brought
-                it to life flawlessly. Their designers understood my aesthetic
-                and incorporated sleek, clean lines, and a neutral color palette
-                to create a serene oasis. I'm in love with my modern,
-                clutter-free space!
+                Eu tinha uma visão de uma casa inspirada no minimalismo, e eles
+                a trouxeram à vida perfeitamente. Seus designers entenderam minha estética
+                e incorporaram linhas limpas e elegantes, com uma paleta de cores neutras,
+                para criar um oásis sereno. Estou apaixonado pelo meu espaço moderno
+                e sem desordem!
               </p>
-              <img src="assets/profile-pic-3.jpg" alt="testimonial" />
+              <img src="assets/profile-pic-3.jpg" alt="depoimento" />
               <h4>John D'souza</h4>
-              <h5>Banker</h5>
+              <h5>Banqueiro</h5>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="testimonial__card">
               <p>
-                What sets them apart is their professionalism and efficiency.
-                They made the entire design process hassle-free, from the
-                initial consultation to the final installation. Their team
-                handled everything, leaving me with a beautifully designed
-                modern interior
+                O que os diferencia é seu profissionalismo e eficiência.
+                Eles tornaram todo o processo de design sem complicações, desde a
+                consulta inicial até a instalação final. A equipe cuidou de tudo,
+                deixando-me com um interior moderno e lindamente projetado.
               </p>
-              <img src="assets/profile-pic-4.jpg" alt="testimonial" />
+              <img src="assets/profile-pic-4.jpg" alt="depoimento" />
               <h4>David Laid</h4>
-              <h5>Businessman</h5>
+              <h5>Empresário</h5>
             </div>
           </div>
         </div>
-        <!-- If we need pagination -->
         <div class="swiper-pagination"></div>
       </div>
     </section>
-
+    
     <section class="section__container blog_container" id="blog">
-      <h2 class="section__header">Recent Blog</h2>
+      <h2 class="section__header">Blogs Recentes</h2>
       <div class="blog__grid">
         <div class="blog__card">
           <img src="assets/blog-1.jpg" alt="blog" />
-          <h4>Mastering Modern Minimalism</h4>
-          <p><span>by</span> DesignSavvySoul <span>on</span> Apr 18th, 2022</p>
+          <h4>Dominando o Minimalismo Moderno</h4>
+          <p><span>por</span> DesignSavvySoul <span>em</span> 18 de abril de 2022</p>
         </div>
         <div class="blog__card">
           <img src="assets/blog-2.jpg" alt="blog" />
-          <h4>The Fusion of Tech and Design</h4>
-          <p>
-            <span>by</span> ChicNestInteriors <span>on</span> Nov 10th, 2022
-          </p>
+          <h4>A Fusão de Tecnologia e Design</h4>
+          <p><span>por</span> ChicNestInteriors <span>em</span> 10 de novembro de 2022</p>
         </div>
         <div class="blog__card">
           <img src="assets/blog-3.jpg" alt="blog" />
-          <h4>Eco-Friendly Modern Interiors</h4>
-          <p><span>by</span> HomeStyleHarmony <span>on</span> Feb 25th, 2023</p>
+          <h4>Interiores Modernos Sustentáveis</h4>
+          <p><span>por</span> HomeStyleHarmony <span>em</span> 25 de fevereiro de 2023</p>
         </div>
       </div>
     </section>
+    
 
     <footer class="footer">
       <div class="section__container footer__container">
         <div class="footer__content">
-          <h4>SUBSCRIBE TO GET THE LATEST NEWS ABOUT US</h4>
+          <h4>INSCREVA-SE PARA RECEBER AS ÚLTIMAS NOVIDADES SOBRE NÓS</h4>
           <p>
-            We recommend you to subscribe to our newspaper. Enter your email to
-            get our daily updates about us
+            Recomendamos que você se inscreva no nosso jornal. Insira seu e-mail para
+            receber nossas atualizações diárias sobre nós.
           </p>
         </div>
         <div class="footer__form">
           <form action="/">
-            <input type="text" placeholder="Enter your email" />
-            <button>Subscribe</button>
+            <input type="text" placeholder="Digite seu e-mail" />
+            <button>Inscrever-se</button>
           </form>
         </div>
       </div>
       <div class="section__container footer__bar">
         <div class="footer__logo">
           <h4><a href="#">NovusHaus</a></h4>
-          <p>Copyright © 2023 Web Design Mastery. All rights reserved.</p>
+          <p>Copyright © 2023 NovusHaus. Todos os direitos reservados.</p>
         </div>
         <ul class="footer__nav">
-          <li class="footer__link"><a href="#">About</a></li>
-          <li class="footer__link"><a href="#">Partnership</a></li>
-          <li class="footer__link"><a href="#">Privacy Policy</a></li>
+          <li class="footer__link"><a href="#">Sobre</a></li>
+          <li class="footer__link"><a href="#">Parcerias</a></li>
+          <li class="footer__link"><a href="#">Política de Privacidade</a></li>
         </ul>
       </div>
-    </footer>
+    </footer>    
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
